--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -98,12 +98,6 @@
                   </a>
                   <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown1">
 
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20-%20V1.6%20-%20Vantage/">REST Vantage Margin Trades ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades ⭐</a></li>
-
-
-                    <div class="dropdown-divider"></div>
-
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut') }}">Risk Auto Cut [Add Login]] ➕</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
@@ -111,28 +105,35 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Equity_protect') }}">Equity Protect ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
 
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.cfh_details') }}">CFH FIX Details ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
-
-
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
-
-                    <div class="dropdown-divider"></div>
-
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Track_Account_Open_Trades_V1/">MonitorOpen Trades ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread ⭐</a></li>
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Risk_AutoCut_V3.2//">Risk Auto Cut</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
 
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit ⭐</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude ➕</a></li>
+                  </ul>
+                </li>
+
+                <li class="nav-item dropleft">
+                  <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown12" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <b>Risk</b> Client tools
+                  </a>
+                  <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown12">
+                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20-%20V1.6%20-%20Vantage/">REST Vantage Margin Trades ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.cfh_details') }}">CFH FIX Details ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
+                    <div class="dropdown-divider"></div>
+
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
+                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
+                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread ⭐</a></li>
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread [External]</a></li>
                     <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
@@ -145,10 +146,9 @@
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades_Settings') }}">Monitor Account Settings ➕</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades') }}">Monitor Account ⭐</a></li>
 
-                    
-
                   </ul>
                 </li>
+
             {% endif %}
 
             {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
