--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -6,8 +6,11 @@
 {{ super() }}
 <style>
   body { background: #eee url({{ url_for('static', filename=backgroud_Filename) }});
+  {% if not no_backgroud_Cover %}
   background-repeat: no-repeat;
-  background-size: cover;}
+  background-size: cover;
+  {% endif %}
+  }
 </style>
 {% endblock %}
 
