--- a/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border.html
@@ -7,7 +7,7 @@
 <style>
   body { background: #eee url({{ url_for('static', filename=backgroud_Filename) }});
   background-repeat: no-repeat;
-  {% if not backgroud_Cover %}
+  {% if not no_backgroud_Cover %}
   background-size: cover;
   {% endif %}}
 </style>
