--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -47,6 +47,7 @@
   <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}?v=2.0.7">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_opacity.css') }}?v=1.0.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootnavbar.css') }}?v=1.0.0">
   {% endblock %}
 
@@ -104,7 +105,6 @@
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Equity_protect') }}">Equity Protect ⭐</a></li>
 
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Track_Account_Open_Trades_V1/">MonitorOpen Trades ⭐</a></li>
