--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -533,7 +533,7 @@
 <br>
 {% for key, value in varibles.items() %}
   <div class="container">
-  <h2 class="text-center bg-light">{{ key }}</h2>
+  <h2 class="caption text-center">{{ key }}</h2>
   {{ value }}
   </div>
 {% endfor %}
