Edited the "Please wait".html. AS well as corrected errors on Monitor account tools
When account has no more open position, it will say "No more open position". Pandas initially dosn't know how to handle it.

--- a/Risk_Aaron/app/templates/Webworker_1_table_Boderless_excel.html
+++ b/Risk_Aaron/app/templates/Webworker_1_table_Boderless_excel.html
@@ -565,7 +565,7 @@
 
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12" id="Table1">
-    <div class ="bg-warning"> Genrating Data. Please Wait.. </div>
+       {% include '_pleaseWait.html' %}
   </div>
   <br>
   {% if description %}
