--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -489,7 +489,7 @@
 <div class="container">
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12" id="Table1">
-    Genrating Data. Please Wait..
+     {% include '_pleaseWait.html' %}
   </div>
   <br>
   {% if description %}
