--- a/Risk_Aaron/app/templates/Webworker_Symbol_Float.html
+++ b/Risk_Aaron/app/templates/Webworker_Symbol_Float.html
@@ -598,7 +598,7 @@
 
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div1">
-    Genrating Data. Please Wait..
+     {% include '_pleaseWait.html' %}
   </div>
 
   <br>
