Added MAM user guide in Risk Downloads

--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -129,6 +129,12 @@
       <td>MAM MT4 Manager.</td>
       <td><a href="https://www.metafx-int.com/products/mam_v4/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 Manager"></a></td>
     </tr>
+
+    <tr>
+      <td><b>MAM MT4 User Guide 🧾</b></td>
+      <td>MAM MT4 User Guide</td>
+      <td><a href="{{ url_for('static', filename='Files/MAM_User_Guide_Client.pdf')  }}" download><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 User Guide"></a></td>
+    </tr>
     <tr>
       <td><b>MAM MT5 Admin</b></td>
       <td>MAM MT5 Admin.</td>
