Risk Auto cut into a new Blueprint
Created a new blueprint for Risk Client Tools.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -99,10 +99,10 @@
                   </a>
                   <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown1">
 
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut') }}">Risk Auto Cut [Add Login] ➕</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.Include_Risk_Autocut') }}">Risk Auto Cut [Add Login] ➕</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
+                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
 
